Added HTML and CSS

--- a/index.html
+++ b/index.html
@@ -8,5 +8,13 @@
   </head>
 
   <main>
+    
+        <nav>
+            <ul>
+              <li><a href="https://github.com/aszpan">Github</a></li>
+              <li><a href="">Portfolio</a></li>
+            </ul>
+          </nav>
+    
     <h1 class="text-center">My New Website</h1>
   </main>
