--- a/index.html
+++ b/index.html
@@ -15,6 +15,21 @@
               <li><a href="">Portfolio</a></li>
             </ul>
           </nav>
+    <header>
+        <h1 class="text-center">My New Website</h1>
+    </header>
+
+    <section>
+        <img id="image-1" src="https://th.bing.com/th/id/R.b7db189b8bf9d800906eb2992fe482cd?rik=rSVFl%2fg30mJ8cQ&riu=http%3a%2f%2fimages2.wikia.nocookie.net%2f__cb20111224175645%2fdoug%2fimages%2f1%2f13%2fPatti1.gif&ehk=XjHG4r1UZCY1txmD6bEGBcwIvrrxZwkuC1lF7XKQkeM%3d&risl=&pid=ImgRaw&r=0" alt="Patty Mayonnaise">
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit.Lorem ipsum dolor, sit amet consectetur adipisicing elit.</p>
+    </section>
+
+    <section>
+        <h2>Contact Me</h2>
+    </section>
+
+    <footer>
+       <p>© 2022 Student Designs</p> 
+    </footer>
     
-    <h1 class="text-center">My New Website</h1>
   </main>
